k8sconfig/natssyncserver-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: natssync-server

spec:
  template:
    metadata:
      name: natssyncserver-pod
      labels:
        type: natssync-server

    spec:
      containers:
        - name: natssync-server
          image: theotw/natssync-server
          ports:
            - containerPort: 8080
              hostPort: 8080
  replicas: 1

  selector:
    matchLabels:
      type: natssync-server
