k8sconfig/relaylet.yaml

apiVersion: v1
kind: Pod

metadata:
  name: relaylet
  labels:
    type: relaylet
    role: relaylet
spec:
  serviceAccountName: relay-sa
  containers:
    - name: relaylet
      image: theotw/k8srelaylet:dev
      imagePullPolicy: Always
