k8sconfig/simple-reg-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: simple-reg-auth

spec:
  template:
    metadata:
      name: simple-reg-auth
      labels:
        type: simple-reg-auth

    spec:
      containers:
        - name: simple-reg-auth
          image: theotw/simple-reg-auth
      restartPolicy: Always

  replicas: 2

  selector:
    matchLabels:
      type: simple-reg-auth
