k8sconfig/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  type: NodePort
  selector:
    type: nats
  ports:
    - protocol: TCP
      port: 4222
      nodePort: 30220
      targetPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: sync-client
spec:
  type: NodePort
  selector:
    type: sync-client
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30281
      targetPort: 8080
---

apiVersion: v1
kind: Pod

metadata:
  name: nats
  labels:
    type: nats
    role: nats
spec:
  containers:
    - name: nats
      image: nats
  dnsPolicy: Default

---
apiVersion: v1
kind: Pod

metadata:
  name: sync-client
  labels:
    type: sync-client
spec:

  containers:
    - name: sync-client
      image: theotw/natssync-client:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Pod

metadata:
  name: echo-proxylet
spec:
  containers:
    - name: echo-proxlet
      image: theotw/echo-proxylet:latest
      imagePullPolicy: Always
---
apiVersion: v1
kind: Pod

metadata:
  name: http-proxylet
spec:
  containers:
    - name: httpproxylet
      image: theotw/httpproxylet:latest
      imagePullPolicy: Always
