k8sconfig/localdebug.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  type: NodePort
  selector:
    type: nats
  ports:
    - protocol: TCP
      port: 4222
      nodePort: 30221
      targetPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: NodePort
  selector:
    type: mongo
  ports:
    - protocol: TCP
      port: 27017
      nodePort: 30017
      targetPort: 27017

---

apiVersion: v1
kind: Pod

metadata:
  name: nats
  labels:
    type: nats
    role: nats
spec:
  containers:
    - name: nats
      image: nats
      imagePullPolicy: Always

  hostNetwork: true
  dnsPolicy: Default

---
apiVersion: v1
kind: Pod

metadata:
  name: mongo
  labels:
    type: mongo
spec:
  containers:
    - name: mongo
      image: mongo:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Pod

metadata:
  name: authserver
  labels:
    type: authserver
spec:
  containers:
    - name: authserver
      image: theotw/simple-reg-auth:latest
      imagePullPolicy: Always
