k8sconfig/nats-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  type: NodePort
  selector:
    type: nats-server
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
      nodePort: 32222
