k8sconfig/nats-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  type: ClusterIP
  selector:
    type: nats-server
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
