k8sconfig/natsmaster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: natsmaster-service
spec:
  type: ClusterIP
  selector:
    type: natsmaster
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
