k8sconfig/natsonly.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  type: NodePort
  selector:
    type: nats
  ports:
    - protocol: TCP
      port: 4222
      nodePort: 30221
      targetPort: 4222
---

apiVersion: v1
kind: Pod

metadata:
  name: nats
  labels:
    type: nats
    role: nats
spec:
  containers:
    - name: nats
      image: nats
      imagePullPolicy: Always

  hostNetwork: true
  dnsPolicy: Default
