k8sconfig/natssyncserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: natssyncserver-service
spec:
  type: NodePort
  selector:
    type: natssync-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
