k8sconfig/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  type: NodePort
  selector:
    type: nats
  ports:
    - protocol: TCP
      port: 4222
      nodePort: 30221
      targetPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-syncserver
spec:
  type: LoadBalancer
  selector:
    type: nats-syncserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: httpproxy
spec:
  type: LoadBalancer
  selector:
    type: httpproxyserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Pod

metadata:
  name: nats
  labels:
    type: nats
    role: nats
spec:
  containers:
    - name: nats
      image: nats
      imagePullPolicy: Always
  dnsPolicy: Default

---
apiVersion: v1
kind: Pod

metadata:
  name: nats-syncserver
  labels:
    type: nats-syncserver
spec:
  containers:
    - name: sync-server
      image: theotw/natssync-server:2.0-ws-beta
      imagePullPolicy: Always
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Pod

metadata:
  name: authserver
  labels:
    type: authserver
spec:
  containers:
    - name: authserver
      image: theotw/simple-reg-auth:2.0-ws-beta
      imagePullPolicy: Always
---
apiVersion: v1
kind: Pod

metadata:
  name: httpproxyserver
  labels:
    type: httpproxyserver
spec:
  containers:
    - name: httpproxyserver
      image: theotw/httpproxy-server:2.0-ws-beta
      imagePullPolicy: Always
