k8sconfig/ingress-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  type: NodePort
  selector:
    type: nats
  ports:
    - protocol: TCP
      port: 4222
      nodePort: 30221
      targetPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-syncserver
spec:
  selector:
    type: nats-syncserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: httpproxy
spec:
  selector:
    type: httpproxyserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Pod

metadata:
  name: nats
  labels:
    type: nats
    role: nats
spec:
  containers:
    - name: nats
      image: nats
      imagePullPolicy: Always
  dnsPolicy: Default

---
apiVersion: v1
kind: Pod

metadata:
  name: nats-syncserver
  labels:
    type: nats-syncserver
spec:
  containers:
    - name: sync-server
      image: theotw/natssync-server:2.0-ws-beta
      imagePullPolicy: Always
      livenessProbe:
        initialDelaySeconds: 20
        timeoutSeconds: 5
        httpGet:
          port: 8080
          path: /bridge-server/healthcheck
      readinessProbe:
        initialDelaySeconds: 5
        timeoutSeconds: 5
        httpGet:
          port: 8080
          path: /bridge-server/healthcheck
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Pod

metadata:
  name: authserver
  labels:
    type: authserver
spec:
  containers:
    - name: authserver
      image: theotw/simple-reg-auth:2.0-ws-beta
      imagePullPolicy: Always
---
apiVersion: v1
kind: Pod

metadata:
  name: httpproxyserver
  labels:
    type: httpproxyserver
spec:
  containers:
    - name: httpproxyserver
      image: theotw/httpproxy-server:2.0-ws-beta
      imagePullPolicy: Always
      ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: bridgetest.netapphci.cloud
      http:
        paths:
          - path: /
            backend:
              service:
                name: nats-syncserver
                port:
                  number: 80
            pathType: Prefix

    - host: proxytest.netapphci.cloud
      http:
        paths:
          - path: /
            backend:
              service:
                name: httpproxy
                port:
                  number: 80
            pathType: Prefix
